--- a/views/public/html/seaservice.html
+++ b/views/public/html/seaservice.html
@@ -695,23 +695,38 @@
                     </form>
                   </div>
                   <script>
-                     document.getElementById("logout").addEventListener("click", function() {
-    // Display the modal with initial message
-    localStorage.clear();
-    var myModal = new bootstrap.Modal(document.getElementById('logoutModal'));
-    myModal.show();
-    localStorage.clear()
+                 document.getElementById("logout").addEventListener("click", function() {
+  // Display the modal with initial message
+  var myModal = new bootstrap.Modal(document.getElementById('logoutModal'));
+  myModal.show();
+  
+  // Send request to update logged status to false
+  const userId = localStorage.getItem('userId');
+  if (userId) {
+    axios.put(`https://nemo.ivistaz.co/user/${userId}/logout`)
+      .then(response => {
+        console.log('Logged out successfully');
+      })
+      .catch(error => {
+        console.error('Error logging out:', error);
+      });
+  } else {
+    console.error('User ID not found in localStorage');
+  }
 
-    // Change the message and spinner after a delay
-    setTimeout(function() {
-        document.getElementById("logoutMessage").textContent = "Shutting down all sessions...";
-    }, 1000);
+  localStorage.clear();
+  
+  // Change the message and spinner after a delay
+  setTimeout(function() {
+      document.getElementById("logoutMessage").textContent = "Shutting down all sessions...";
+  }, 1000);
 
-    // Redirect after another delay
-    setTimeout(function() {
-        window.location.href = "loginpage.html";
-    }, 2000);
+  // Redirect after another delay
+  setTimeout(function() {
+      window.location.href = "loginpage.html";
+  }, 2000);
 });
+
                     
                                         async function editSeaService(id) {
                             try {
