--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -620,7 +620,7 @@
                   />
                 
                 </div> -->
-
+                 Nsnemo
               </div>
               
               <div class="container " id="searchresult">
@@ -747,10 +747,163 @@
                     </div>
                      
                     </div>
+                    <div class=" rounded-3  mt-3">
+                      <h4 class="text-dark text-center card p-3 mb-0">Today's Progress <div id="datetime" style="font-size: 10px;" class="text-primary p-3 pb-0"></div></h4>
+                    <div class="row">
+                    <div class="card mt-3 col m-3" >
+                      <div class="card-body">
+                        <div class="card-title d-flex align-items-start justify-content-between">
+                          <div class="avatar flex-shrink-0 me-3">
+                            <span class="avatar-initial rounded bg-label-dark"><i class="bx bx-microphone"></i></span>
+                          </div>
+                          
+                          <div class="dropdown" >
+                            <button class="btn p-0" type="button" id="cardOpt3" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <i class="bx bx-dots-vertical-rounded"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt3">
+                              <a class="dropdown-item" href="./report.html">View More</a>
+                            </div>
+                          </div>
+                        </div>
+                        
+                        <span class="fw-medium d-block mb-1">Todays Calls:</span>
+                        <h3 class="card-title mb-2">
+                            <div id="callCount"></div>
+                        </h3>
+                        <small class="fw-medium">
+                            <i id="arrowIcon" class="bx"></i>
+                            <span id="percentageChange"></span>
+                        </small>
+                      </div>
+                    </div>
+                    
+
+                    <div class="card mt-3 col ms-0 m-3" >
+                      <div class="card-body">
+                        <div class="card-title d-flex align-items-start justify-content-between">
+                         
+                          <div class="avatar flex-shrink-0">
+                            <img src="../../public/assets/img/icons/unicons/chart.png" alt="cube" class="rounded">
+                          </div>
+                          
+
+                          <div class="dropdown" >
+                            <button class="btn p-0" type="button" id="cardOpt3" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <i class="bx bx-dots-vertical-rounded"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt3">
+                              <a class="dropdown-item" href="./report.html">View More</a>
+                            </div>
+                          </div>
+                        </div>
+                        
+                        <span class="fw-medium d-block mb-1">Proposed:</span>
+                        <h3 class="card-title mb-2">
+                            <div id="proposedCount"></div>
+                        </h3>
+                        <small class="fw-medium">
+                            <i id="arrowIcon" class="bx"></i>
+                            <span id="proposedArrowIcon"></span>
+                            <span id="proposedPercentageChange"></span>
+
+                        </small>
+                      </div>
+                    </div>
+
+                    <div class="card mt-3 col ms-0 m-3" >
+                      <div class="card-body">
+                        <div class="card-title d-flex align-items-start justify-content-between">
+                          <div class="avatar me-2">
+                            <span class="avatar-initial rounded bg-label-primary"><i class="bx bx-time-five"></i></span>
+                          </div>
+                          
+                          <div class="dropdown" >
+                            <button class="btn p-0" type="button" id="cardOpt3" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <i class="bx bx-dots-vertical-rounded"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt3">
+                              <a class="dropdown-item" href="./report.html">View More</a>
+                            </div>
+                          </div>
+                        </div>
+                        
+                        <span class="fw-medium d-block mb-1">Approved:</span>
+                        <h3 class="card-title mb-2">
+                            <div id="approvedCount"></div>
+                        </h3>
+                        <small class="fw-medium">
+                            <i id="arrowIcon" class="bx"></i>
+                            <span id="approvedArrowIcon"></span>
+                            <span id="approvedPercentageChange"></span>
+                        </small>
+                      </div>
+                    </div>
+
+                    <div class="card mt-3 col ms-0 m-3" >
+                      <div class="card-body">
+                        <div class="card-title d-flex align-items-start justify-content-between">
+                          <div class="avatar flex-shrink-0 me-3">
+                            <span class="avatar-initial rounded bg-label-success"><i class="bx bx-check-circle"></i></span>
+                          </div>
+                          
+                          <div class="dropdown" >
+                            <button class="btn p-0" type="button" id="cardOpt3" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <i class="bx bx-dots-vertical-rounded"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt3">
+                              <a class="dropdown-item" href="./report.html">View More</a>
+                            </div>
+                          </div>
+                        </div>
+                        
+                        <span class="fw-medium d-block mb-1">Joined:</span>
+                        <h3 class="card-title mb-2">
+                            <div id="joinedCount"></div>
+                        </h3>
+                        <small class="fw-medium">
+                            <i id="arrowIcon" class="bx"></i>
+                            <span id="joinedArrowIcon"></span>
+                            <span id="joinedPercentageChange"></span>
+                        </small>
+                      </div>
+                    </div>
+
+                    <div class="card mt-3 col ms-0 m-3" >
+                      <div class="card-body">
+                        <div class="card-title d-flex align-items-start justify-content-between">
+                          <div class="avatar me-2">
+                            <span class="avatar-initial rounded bg-label-danger"><i class="bx bx-error"></i></span>
+                          </div>
+                          
+                          <div class="dropdown" >
+                            <button class="btn p-0" type="button" id="cardOpt3" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <i class="bx bx-dots-vertical-rounded"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="cardOpt3">
+                              <a class="dropdown-item" href="./report.html">View More</a>
+                            </div>
+                          </div>
+                        </div>
+                        
+                        <span class="fw-medium d-block mb-1">Rejected:</span>
+                        <h3 class="card-title mb-2">
+                            <div id="rejectedCount"></div>
+                        </h3>
+                        
+                        <small class="fw-medium">
+                            <i id="arrowIcon" class="bx"></i>
+                            <span id="rejectedArrowIcon"></span>
+                            <span id="rejectedPercentageChange"></span>
+                        </small>
+                      </div>
+                    </div>
+                    </div>
+                    </div>
                        <div class=" text-center d-flex justify-content-center  ">
                         
-                            <div class=" mt-3 bg-white rounded-3 me-3 shadow-sm">
-                              <h6 class="text-center mt-5 fw-bolder">Live Candidate Status <br><br> <div id="datetime" style="font-size: 10px;" class="text-primary"></div> </h6>
+                            <div class=" mt-0 bg-white rounded-3 me-3 shadow-sm">
+                              <h5 class="text-center mt-5 text-dark">Candidate Status <br><br>  </h5>
 
                                 <div class="candidate-status  rounded-3  p-5 pt-0">
                                  
@@ -774,7 +927,7 @@
                                       </div>
                                       
                                   </div>
-                                  <div class=" todays-call border border-secondary-subtle rounded-3 mt-5 pb-0 " >
+                                  <!-- <div class=" todays-call border border-secondary-subtle rounded-3 mt-5 pb-0 " >
                                     <table class="table  text-center table-border-bottom-0 pb-0 mb-0" >
                                       <tbody>
                                         <tr>
@@ -785,16 +938,16 @@
                                         </tr>
                                       </tbody>
                                     </table>
-                                  </div>
+                                  </div> -->
                                   
                                 </div>
                                   
                               <img src="../../public/assets/img/illustrations/undraw_certificate_re_yadi.svg" style="width: 50px;height: auto;" />
                                 
                             </div>  
-                            <div class="card p-5 pb-0 mt-3 w-100">
-                              <h6 class="fw-bolder ">Total available nemo candidates</h6>
-                            <div id="rankCharts" ></div>
+                            <div class="card p-5 pb-0 mt-0 pt-4 w-100">
+                              <h5 style="margin-top: 21px;margin-bottom: 0px;" class="text-dark">Total available candidates</h5>
+                            <div id="rankCharts" class="pb-3" ></div>
                             </div>
                             
                            
@@ -819,7 +972,9 @@
 
 
 
+
                         </div>
+                        
                         <div class="d-flex justify-content-end mt-5 mb-3">
                           <span  style="font-size: 12px;">Nautilus Shipping</span>
 
