--- a/views/public/html/candidate-login.html
+++ b/views/public/html/candidate-login.html
@@ -63,7 +63,8 @@
               <!-- Logo -->
               <div class="app-brand justify-content-center">
                 <a href="indexpage.html" class="app-brand-link gap-2">
-                  <span class="app-brand-logo demo">
+                                <span class="app-brand-logo demo mb-3">
+
                     <svg
                       width="25"
                       viewBox="0 0 25 42"
@@ -96,13 +97,13 @@
                               <mask id="mask-2" fill="white">
                                 <use xlink:href="#path-1"></use>
                               </mask>
-                              <use fill="#696cff" xlink:href="#path-1"></use>
+                              <use fill="#008E9C" xlink:href="#path-1"></use>
                               <g id="Path-3" mask="url(#mask-2)">
-                                <use fill="#696cff" xlink:href="#path-3"></use>
+                                <use fill="#008E9C" xlink:href="#path-3"></use>
                                 <use fill-opacity="0.2" fill="#FFFFFF" xlink:href="#path-3"></use>
                               </g>
                               <g id="Path-4" mask="url(#mask-2)">
-                                <use fill="#696cff" xlink:href="#path-4"></use>
+                                <use fill="#008E9C" xlink:href="#path-4"></use>
                                 <use fill-opacity="0.2" fill="#FFFFFF" xlink:href="#path-4"></use>
                               </g>
                             </g>
@@ -110,7 +111,7 @@
                               id="Triangle"
                               transform="translate(19.000000, 11.000000) rotate(-300.000000) translate(-19.000000, -11.000000) "
                             >
-                              <use fill="#696cff" xlink:href="#path-5"></use>
+                              <use fill="#008E9C" xlink:href="#path-5"></use>
                               <use fill-opacity="0.2" fill="#FFFFFF" xlink:href="#path-5"></use>
                             </g>
                           </g>
