--- a/views/public/scss/theme-default.scss
+++ b/views/public/scss/theme-default.scss
@@ -2,7 +2,7 @@
 @import './_theme/common';
 @import './_theme/_theme';
 
-$primary-color: #696cff;
+$primary-color: #008E9C;
 
 @include template-common-theme($primary-color);
 
