--- a/views/public/html/candidate-login.html
+++ b/views/public/html/candidate-login.html
@@ -93,8 +93,8 @@
               </a>
             </div>
             <!-- /Logo -->
-            <h4 class="mb-4 text-center mt-0 me-4 pt-3" style="  font-family: 'Baskerville', serif;
-            ">Login - Candidate </h4>
+            <h4 class="mb-4 text-center mt-0 me-4 pt-3" style="font-size: 14px;  
+            ">CANDIDATE LOGIN</h4>
 
             <form id="login-form" class="mb-3" >
               <div class="mb-3">
