--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -113,8 +113,8 @@
                 </a>
               </div>
               <!-- /Logo -->
-              <h4 class="mb-4 text-center mt-0 me-4 pt-3" style="  font-family: 'Palatino', serif;
-              ">Login  </h4>
+              <h4 class="mb-4 text-center mt-0 me-4 pt-3" style="font-size: 14px;  
+              ">LOGIN </h4>
 
               <form id="login-form" class="mb-3" >
                 <div class="mb-3 ">
